Add keywordHashes
